src/objects/P7S1_OpportunityApproval__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_MN3DooH__c</fullName>
        <label>MN3 DooH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalGewichtet__c</fullName>
        <formula>P7S1_Mn3Digital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalInPage__c</fullName>
        <inlineHelpText>Media Netto 3 Digital, Anteil der Display Werbung  (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 Display in page</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalInStream__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Video Werbung, Anteil der Video Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 Video in Stream</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3Digital__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Werbung</inlineHelpText>
        <label>MN3 Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InPageGewichtet__c</fullName>
        <formula>P7S1_Mn3InPage__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Davon MN3 InPage gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InPage__c</fullName>
        <inlineHelpText>Media Netto 3 Digital, Anteil der Display Werbung  (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 InPage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InStreamGewichtet__c</fullName>
        <formula>P7S1_Mn3InStream__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Davon MN3 InStream gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InStream__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Video Werbung, Anteil der Video Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 InStream</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TVKIplusDigitalGewichtet__c</fullName>
        <formula>( P7S1_Mn3TvCustomerIntegration__c + P7S1_Mn3Digital__c ) * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 (TV KI + Digital) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TVKIplusDigital__c</fullName>
        <formula>P7S1_Mn3TvCustomerIntegration__c + P7S1_Mn3Digital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 (TV KI + Digital)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TvCustomerIntegrationGewichtet__c</fullName>
        <formula>P7S1_Mn3TvCustomerIntegration__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 TV Kundenintegration gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TvCustomerIntegration__c</fullName>
        <inlineHelpText>Media Netto 3 des Kunden TV Werbeanteils</inlineHelpText>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3_DandADigitalGewichtet__c</fullName>
        <formula>P7S1_Mn3_DandADigital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 D&amp;A Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3_DandADigital__c</fullName>
        <description>Media Netto 3 D&amp;A Digitale Werbefläche (D&amp;A Assets)</description>
        <inlineHelpText>Media Netto 3 D&amp;A Digitale Werbefläche (D&amp;A Assets)</inlineHelpText>
        <label>MN3 D&amp;A Digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_NetBarterVolumeGewichtet__c</fullName>
        <formula>P7S1_NetBarterVolume__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Netto-Barter-Volumen gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_NetBarterVolume__c</fullName>
        <description>Brutto Barter Volumen abzüglich Gegengeschäftsrabatt</description>
        <inlineHelpText>Brutto Barter Volumen abzüglich Gegengeschäftsrabatt</inlineHelpText>
        <label>Netto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_OppCloseDate__c</fullName>
        <formula>P7S1_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schlusstermin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_OppDescription255__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_Description255__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity-Beschreibung (kurz)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OppKampagne__c</fullName>
        <formula>P7S1_Opportunity__r.Kampagne__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kampagne</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OppKampagnenende__c</fullName>
        <formula>P7S1_Opportunity__r.Kampagnenende__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kampagnenende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_OppKampagnenstart__c</fullName>
        <formula>P7S1_Opportunity__r.Kampagnenstart__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kampagnenstart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_OppKundenprodukt__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_CustomerProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kundenprodukt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OppPflichtfeldpruefungBestanden__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_ApprovalReady__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pflichtfeldprüfung Opp bestanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_OppPrimaryCampaignSource__c</fullName>
        <formula>P7S1_Opportunity__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primäre Kampagnenquelle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OppProbability__c</fullName>
        <formula>P7S1_Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wahrscheinlichkeit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_OppRecordType__c</fullName>
        <formula>P7S1_Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Datensatztyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OppStage__c</fullName>
        <formula>TEXT( P7S1_Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Freigaben</relationshipLabel>
        <relationshipName>Opportunity_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_OtherRevenueGewichtet__c</fullName>
        <formula>P7S1_OtherRevenue__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sonstiger Umsatz gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_OtherRevenueType__c</fullName>
        <description>Sonstige Umsatzart</description>
        <inlineHelpText>Sonstige Umsatzart</inlineHelpText>
        <label>Umsatzart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OtherRevenue__c</fullName>
        <description>Nettowert sonstige Umsatzart</description>
        <inlineHelpText>Nettowert sonstige Umsatzart</inlineHelpText>
        <label>Sonstiger Umsatz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerUnitCopy__c</fullName>
        <description>Copy of Opportunity Access owner Unit for use with Sharing</description>
        <inlineHelpText>Copy of Opportunity Access owner Unit for use with Sharing</inlineHelpText>
        <label>Owner Unit (Antragsteller) (Copy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerUnit__c</fullName>
        <description>Zeigt die Unit des Antragsstellers an</description>
        <formula>Owner:User.P7S1_Unit__c</formula>
        <inlineHelpText>Zeigt die Unit des Antragsstellers an</inlineHelpText>
        <label>Owner Unit (Antragsteller)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_RahmenfreigabeMediaboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fallen die quantitativen Kriterien unter die bestehenden Media Board Rahmenfreigaben?</inlineHelpText>
        <label>Rahmenfreigabe Media Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_SpotKundenintegrationsanteil__c</fullName>
        <description>Kundenanteil Spotlänge (in Sekunden) / Gesamtspotlänge (in Sekunden)</description>
        <formula>IF (P7S1_TvSpotLength__c = 0,0, (P7S1_TvSpotLengthCustomer__c /  P7S1_TvSpotLength__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Kundenintegrationsanteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_TVCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for Criteria based sharing rule</description>
        <label>TV (Copy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_TotalNetRevenueFixVarGewichtet__c</fullName>
        <formula>P7S1_TotalNetRevenueFixVar__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umsatz gesamt netto (fix+var) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_TotalNetRevenueFixVar__c</fullName>
        <description>Gesamt Umsatz netto (Cash-In)
(MN3 TV Kundenintegration + MN3 Digital + MN3 D&amp;A Digital + Variabler Umsatz (Rev Share) + Variabler Umsatz (Upside) + Sonstiger Umsatz + MN3 DooH</description>
        <formula>P7S1_Mn3TvCustomerIntegration__c + P7S1_Mn3Digital__c +   P7S1_Mn3_DandADigital__c  + P7S1_VariableRevenue__c + P7S1_OtherRevenue__c +  P7S1_VariablerUmsatzUpside__c +  P7S1_MN3DooH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gesamt Umsatz netto (Cash-In)
(MN3 TV Kundenintegration + MN3 Digital + MN3 D&amp;A Digital + Variabler Umsatz (Rev Share) + Variabler Umsatz (Upside) + Sonstiger Umsatz + MN3 DooH)</inlineHelpText>
        <label>Umsatz gesamt netto (fix + variabel)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_TvSpotLengthCustomer__c</fullName>
        <inlineHelpText>Länge des Kundenanteils des TV Spots in Sekunden</inlineHelpText>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_TvSpotLength__c</fullName>
        <inlineHelpText>Länge des Gesamt TV Spots in Sekunden</inlineHelpText>
        <label>Gesamtspotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_UmsatzFixPlusVarTVGewichtet__c</fullName>
        <formula>P7S1_UmsatzFixPlusVariabelTV__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umsatz gesamt fix + var (TV) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_UmsatzFixPlusVariabelTV__c</fullName>
        <description>MN3 TV Kundenintegration + Variabler Umsatz (Rev Share) + Variabler Umsatz (upside)</description>
        <formula>P7S1_Mn3TvCustomerIntegration__c +   P7S1_VariableRevenue__c  +  P7S1_VariablerUmsatzUpside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN3 TV Kundenintegration + Variabler Umsatz (Rev Share) + Variabler Umsatz (upside)</inlineHelpText>
        <label>Umsatz gesamt fix + variabel (TV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_UmsatzVerrechenbar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Umsatz verrechenbar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_VariableRevenueGewichtet__c</fullName>
        <formula>P7S1_VariableRevenue__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variabler Umsatz (Rev Share) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_VariableRevenue__c</fullName>
        <description>erwartete variable Umsatzbeteiligung als definierter Vergütungsbestandteil (z.B. Betrag x pro sold Unit des beworbenen Partnerprodukts)</description>
        <inlineHelpText>erwartete variable Umsatzbeteiligung als definierter Vergütungsbestandteil (z.B. Betrag x pro sold Unit des beworbenen Partnerprodukts)</inlineHelpText>
        <label>Variabler Umsatz (Rev Share)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_VariablerUmsatzUpsideGewichtet__c</fullName>
        <formula>P7S1_VariablerUmsatzUpside__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variabler Umsatz (Upside) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_VariablerUmsatzUpside__c</fullName>
        <description>erwarteter interner Umsatzuplift aus Kooperation</description>
        <inlineHelpText>erwarteter interner Umsatzuplift aus Kooperation</inlineHelpText>
        <label>Variabler Umsatz (Upside)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldDigitalCustomerIntegration__c</fullName>
        <formula>( P7S1_Mn3Digital__c / P7S1_BmvDigital__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital-Yield Kundenintegration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldGesamtFixPlusVariabelTV__c</fullName>
        <description>Umsatz gesamt fix + variabel TV / BMV gesamt TV</description>
        <formula>IF (P7S1_BmvTv__c =0,0,(P7S1_UmsatzFixPlusVariabelTV__c / P7S1_BmvTv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Umsatz gesamt fix + variabel TV / BMV gesamt TV</inlineHelpText>
        <label>Yield gesamt fix + variabel (TV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldGesamtFixTV__c</fullName>
        <description>MN3 TV Kundenintegration / BMV gesamt TV</description>
        <formula>IF  (P7S1_BmvTv__c = 0,0,  (P7S1_Mn3TvCustomerIntegration__c /   P7S1_BmvTv__c))</formula>
        <inlineHelpText>MN3 TV Kundenintegration / BMV gesamt TV</inlineHelpText>
        <label>Yield gesamt fix (TV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldGesamtVariabelTV__c</fullName>
        <description>Variabler Umsatz (Rev Share) + Variabler Umsatz (upside) / BMV gesamt TV</description>
        <formula>IF (P7S1_BmvTv__c = 0,0, ((P7S1_VariableRevenue__c +  P7S1_VariablerUmsatzUpside__c)  /  P7S1_BmvTv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variabler Umsatz (Rev Share) + Variabler Umsatz (upside) / BMV gesamt TV</inlineHelpText>
        <label>Yield gesamt variabel (TV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldTotalFix__c</fullName>
        <formula>P7S1_BetragMn3Fix__c / P7S1_BmvTotalFix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield fix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldTotal__c</fullName>
        <description>Gesamt Yield des Media Deal
(Umsatz gesamt netto (fix + variabel) / BMV gesamt)</description>
        <formula>IF(
 P7S1_BmvTotalFix__c = 0 ,
 0 ,
 P7S1_TotalNetRevenueFixVar__c /  P7S1_BmvTotalFix__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gesamt Yield des Media Deal
(Umsatz gesamt netto (fix + variabel) / BMV gesamt)</inlineHelpText>
        <label>Yield gesamt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_YieldTvCustomerIntegration__c</fullName>
        <formula>( P7S1_Mn3TvCustomerIntegration__c /  P7S1_BmvTvCustomerIntegration__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TV-Yield Kundenintegration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_inDiskussion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox kann durch Genehmiger gesetzt werden, wenn der Genehmigungsprozess nicht direkt fortgesetzt wird.</description>
        <inlineHelpText>Checkbox kann durch Genehmiger gesetzt werden, wenn der Genehmigungsprozess nicht direkt fortgesetzt wird.</inlineHelpText>
        <label>in Diskussion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_internerPartner__c</fullName>
        <label>interner Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>12Auto Group</fullName>
                </value>
                <value>
                    <fullName>7NXT</fullName>
                </value>
                <value>
                    <fullName>7Sports</fullName>
                </value>
                <value>
                    <fullName>Advopedia</fullName>
                </value>
                <value>
                    <fullName>Amorelie</fullName>
                </value>
                <value>
                    <fullName>Comvel</fullName>
                </value>
                <value>
                    <fullName>Discavo</fullName>
                </value>
                <value>
                    <fullName>etraveli</fullName>
                </value>
                <value>
                    <fullName>fem (sixx)</fullName>
                </value>
                <value>
                    <fullName>Flaconi</fullName>
                </value>
                <value>
                    <fullName>Gymondo</fullName>
                </value>
                <value>
                    <fullName>Magic Internet Holding</fullName>
                </value>
                <value>
                    <fullName>Marktguru</fullName>
                </value>
                <value>
                    <fullName>maxdome</fullName>
                </value>
                <value>
                    <fullName>moebel.de</fullName>
                </value>
                <value>
                    <fullName>mydays</fullName>
                </value>
                <value>
                    <fullName>P7S1 Digital</fullName>
                </value>
                <value>
                    <fullName>P7S1 Licensing</fullName>
                </value>
                <value>
                    <fullName>P7S1 PayTV</fullName>
                </value>
                <value>
                    <fullName>preis24.de</fullName>
                </value>
                <value>
                    <fullName>SilverTours</fullName>
                </value>
                <value>
                    <fullName>sonstiger</fullName>
                </value>
                <value>
                    <fullName>Starwatch</fullName>
                </value>
                <value>
                    <fullName>Studio 71</fullName>
                </value>
                <value>
                    <fullName>Stylight GmbH</fullName>
                </value>
                <value>
                    <fullName>tropo</fullName>
                </value>
                <value>
                    <fullName>TVRL</fullName>
                </value>
                <value>
                    <fullName>Valmano</fullName>
                </value>
                <value>
                    <fullName>Verivox</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_sonstigerInternerPartner__c</fullName>
        <inlineHelpText>Falls interner Partner &quot;sonstiger&quot; bitte hier genauer beschreiben</inlineHelpText>
        <label>sonstiger interner Partner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOM_DigitalSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Freigaben (Digital Sales)</relationshipLabel>
        <relationshipName>Opportunity_Freigaben1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_DooHSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DooH Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Freigaben5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_Einkaufsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einkaufsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Freigaben (Einkaufsagenturverkäufer)</relationshipLabel>
        <relationshipName>Opportunity_Freigaben2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_Planungsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planungsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity_Freigaben3</relationshipLabel>
        <relationshipName>Opportunity_Freigaben3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_TVKundenverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TV Kundenverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunity Freigaben (TV Kundenverkäufer)</relationshipLabel>
        <relationshipName>Opportunity_Freigaben4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ven_AnnualShiftingRightsCustomer__c</fullName>
        <label>Yearly Customer Push Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_AnnualShiftingRightsP7S1__c</fullName>
        <label>Yearly P7S1 Push Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_DescriptionWKZPotential__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_EnvisagedTypeOfTransaction__c</fullName>
        <label>Envisaged Type Of Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_FeedbackAdMarketDevInitiative__c</fullName>
        <label>Ad Market Development Initiative Assessm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_InterestOfData__c</fullName>
        <label>Data Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>via Data Next</fullName>
                </value>
                <value>
                    <fullName>via basic Data-Coop</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_ListOfWebsitesApps__c</fullName>
        <label>List of Websites / Apps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_MonthlyRegistration__c</fullName>
        <label>Monthly Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_MonthlyShiftingRightsCustomer__c</fullName>
        <label>Monthly Customer Push Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_MonthlyShiftingRightsP7S1__c</fullName>
        <label>Monthly P7S1 Push Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_PartnerDatadeals__c</fullName>
        <label>Partner Data Deal(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_PresDatadealsWithThird__c</fullName>
        <label>Existing Third  Party Data Deals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_ProductionDescription__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_SLMDeviation__c</fullName>
        <label>SLM Deviation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_SLM__c</fullName>
        <label>SLM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_SegmentDefinition__c</fullName>
        <label>Segment Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_SummarySocialDataOnRegistration__c</fullName>
        <label>Compiled Sociodemographic Data at Regist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_WKZPotentialApproved__c</fullName>
        <label>Potential Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Freigabe</label>
    <listViews>
        <fullName>All</fullName>
        <columns>P7S1_internerPartner__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>P7S1_Accountname__c</columns>
        <columns>P7S1_AccountOwnerUnit__c</columns>
        <columns>P7S1_AccountOwner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>P7S1_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MB_Einreichungen</fullName>
        <columns>P7S1_internerPartner__c</columns>
        <columns>P7S1_Accountname__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_BmvTv__c</columns>
        <columns>P7S1_BmvDigital__c</columns>
        <columns>P7S1_YieldGesamtFixTV__c</columns>
        <columns>P7S1_YieldTvCustomerIntegration__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>P7S1_ApprovedMediaboard__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>=MB-Einreichungen</label>
        <language>de</language>
        <queue>P7S1_MediaBoard</queue>
        <sharedTo>
            <group>Media_Board</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MB_Freigaben</fullName>
        <columns>P7S1_internerPartner__c</columns>
        <columns>P7S1_Accountname__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_OppKampagnenstart__c</columns>
        <columns>P7S1_OppKampagnenende__c</columns>
        <columns>P7S1_HasMediaBarter__c</columns>
        <columns>P7S1_HasMediaDigital__c</columns>
        <columns>P7S1_BmvTv__c</columns>
        <columns>P7S1_BmvDigital__c</columns>
        <columns>P7S1_BmvTvCustomerIntegration__c</columns>
        <columns>P7S1_Mn3TvCustomerIntegration__c</columns>
        <columns>P7S1_YieldGesamtFixPlusVariabelTV__c</columns>
        <columns>P7S1_YieldGesamtFixTV__c</columns>
        <columns>P7S1_CashYieldTvCustomerIntegration__c</columns>
        <columns>P7S1_BMVOnTopZuBudget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Eingereicht</value>
        </filters>
        <filters>
            <field>P7S1_OppStage__c</field>
            <operation>notEqual</operation>
            <value>geschlossen und verloren</value>
        </filters>
        <label>=MB-Pipeline</label>
        <language>de</language>
        <sharedTo>
            <group>Media_Board</group>
        </sharedTo>
    </listViews>
</CustomObject>